fixed alignment issue with contact information when viewport size is adjusted down to an unconventional width

--- a/assets/css/supplemental.css
+++ b/assets/css/supplemental.css
@@ -34,8 +34,11 @@ h4 {
 }
 
 .contact-element {
-    width: fit-content;
     margin: 10px;
+}
+.contact-element.email {
+    margin: 10px;
+    width: fit-content;
 }
 
 .logo {
